--- a/asset/style.css
+++ b/asset/style.css
@@ -24,6 +24,10 @@ font-family: 'Titillium Web', sans-serif; */
     overflow: sticky;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 .body {
     font-family: 'Patrick Hand', cursive, sans-serif;
 }
@@ -405,6 +409,12 @@ font-family: 'Titillium Web', sans-serif; */
 
 .form-control .text-area:active{
     border: 1px solid black;
+
+}
+
+.form-control .text-area:focus{
+    border: none;
+    outline: none;
 }
 
 .btn-contact{
@@ -444,8 +454,9 @@ font-family: 'Titillium Web', sans-serif; */
 }
 
 .box2>img {
-    height: 20px;
-    width: 20px;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
     padding: 2px;
     padding-left: 2px;
 }
