--- a/asset/style.css
+++ b/asset/style.css
@@ -148,6 +148,7 @@ html{
     width: 20px;
     padding: 2px;
     padding-left: 2px;
+    cursor: pointer;
 }
 
 
@@ -366,7 +367,7 @@ html{
 .contact-heading {
     padding: 10px;
     color: white;
-    font-size: 30px;
+    font-size: 22px;
 }
 
 .contact-content {
